--- a/css/index.css
+++ b/css/index.css
@@ -32,8 +32,8 @@ html,body,.swiper-container {
 	position: absolute;
 	height: 0;
 	left: 10%;
-	-webkit-transform: rotateX(43deg);
-	transform: rotateX(43deg);
+	-webkit-transform: rotateX(40deg);
+	transform: rotateX(40deg);
 	overflow: hidden;
 }
 .sub>img {
@@ -90,6 +90,26 @@ html,body,.swiper-container {
 	-webkit-animation-fill-mode: both;
 	animation-fill-mode: both;
 }
+.start-btn {
+	/*display: block;*/
+	position: absolute;
+	bottom: 24%;
+	width: 13%;
+	left: 43.5%;
+	display: none;
+}
+.start-word {
+	position: absolute;
+	width: 68%;
+	left: 17%;
+	top: 40%;
+	-webkit-animation: fadeInOut 1s infinite linear;
+	animation: fadeInOut 1s infinite linear;
+}
+
+
+
+
 
 /*slide1*/
 #main-swiper #slide1 {
@@ -165,6 +185,23 @@ html,body,.swiper-container {
 @keyframes fadeInOut {	
 	0%{ opacity: 1;}
 	100%{ opacity: 0; }
+}
+#s1-word {
+	width: 74%;
+	position: absolute;
+	top: 70%;
+	left: 13%;
+}
+#s1-pos {
+	width: 4%;
+	position: absolute;
+	top: 31%;
+	left: 51.5%;
+	display: none;
+	z-index: 10;
+}
+#s1-pos>img {
+	width: 100%;
 }
 
 
@@ -295,18 +332,18 @@ html,body,.swiper-container {
  	opacity: 0;
 }
 .s2-para-a3-ani {
-	-webkit-animation: typing 1.4s 5.4s steps(7, end),
- 	blink-caret .3s step-end 5.4s 5 alternate;
-	animation: typing 1.4s 5.4s steps(7, end),
- 	blink-caret .3s step-end 5.4s 5 alternate;
+	-webkit-animation: typing 1.4s 5.2s steps(7, end),
+ 	blink-caret .3s step-end 5.2s 5 alternate;
+	animation: typing 1.4s 5.2s steps(7, end),
+ 	blink-caret .3s step-end 5.2s 5 alternate;
  	-webkit-animation-fill-mode: both;
  	animation-fill-mode: both;
 }
 .s2-para2-ani {
-	-webkit-animation: typing 1.4s 7s steps(7, end),
- 	blink-caret .3s step-end 7s infinite alternate;
-	animation: typing 1.4s 7s steps(7, end),
- 	blink-caret .3s step-end 7s infinite alternate;
+	-webkit-animation: typing 1.4s 6.6s steps(7, end),
+ 	blink-caret .3s step-end 6.6s infinite alternate;
+	animation: typing 1.4s 6.6s steps(7, end),
+ 	blink-caret .3s step-end 6.6s infinite alternate;
  	-webkit-animation-fill-mode: both;
  	animation-fill-mode: both;
 }
@@ -387,7 +424,7 @@ html,body,.swiper-container {
 	width: 58%;
 	left: 21%;
 }
-.s3-para1 {
+/*.s3-para1 {
 	font-size: 22px; 
  	border-right: .1em solid;
  	width: 2em;
@@ -404,8 +441,26 @@ html,body,.swiper-container {
  	blink-caret .3s step-end 1.1s 2  alternate;
  	-webkit-animation-fill-mode: both;
  	animation-fill-mode: both;
+}*/
+.s3-para-a3 {
+	font-size: 22px; 
+ 	border-right: .1em solid;
+ 	width: 6em;
+ 	white-space: nowrap;
+ 	overflow: hidden;
+ 	margin: 0 auto 10px;
+ 	border-color:transparent;
+	opacity: 0;
 }
-.s3-para2 {
+.s3-para-a3-ani {
+	-webkit-animation: typing 1.2s steps(6, end) 1.1s,
+ 	blink-caret .3s step-end 1.1s 4  alternate;
+	animation: typing 1.2s steps(6, end) 1.1s,
+ 	blink-caret .3s step-end 1.1s 4  alternate;
+ 	-webkit-animation-fill-mode: both;
+ 	animation-fill-mode: both;
+}
+/*.s3-para2 {
 	font-size: 22px; 
  	border-right: .1em solid;
  	width: 8em; 
@@ -420,6 +475,42 @@ html,body,.swiper-container {
  	blink-caret .3s step-end 1.7s infinite alternate;
 	animation: typing 1.6s 1.7s steps(8, end),
  	blink-caret .3s step-end 1.7s infinite alternate;
+ 	-webkit-animation-fill-mode: both;
+ 	animation-fill-mode: both;
+}*/
+.s3-para1 {
+	font-size: 22px; 
+ 	border-right: .1em solid;
+ 	width: 2em;
+ 	white-space: nowrap;
+ 	overflow: hidden;
+ 	margin: 0 auto 10px;
+ 	border-color:transparent;
+	opacity: 0;
+}
+.s3-para1-ani {
+	-webkit-animation: typing .4s steps(2, end) 2.3s,
+ 	blink-caret .3s step-end 2.3s 2  alternate;
+	animation: typing .4s steps(2, end) 2.3s,
+ 	blink-caret .3s step-end 2.3s 2  alternate;
+ 	-webkit-animation-fill-mode: both;
+ 	animation-fill-mode: both;
+}
+.s3-para2 {
+	font-size: 22px; 
+ 	border-right: .1em solid;
+ 	width: 8em; 
+ 	white-space: nowrap;
+ 	overflow: hidden;
+ 	margin: 0 auto;
+ 	border-color:transparent;
+ 	opacity: 0;
+}
+.s3-para2-ani {
+	-webkit-animation: typing 1.6s 2.7s steps(8, end),
+ 	blink-caret .3s step-end 2.7s infinite alternate;
+	animation: typing 1.6s 2.7s steps(8, end),
+ 	blink-caret .3s step-end 2.7s infinite alternate;
  	-webkit-animation-fill-mode: both;
  	animation-fill-mode: both;
 }
@@ -464,10 +555,10 @@ html,body,.swiper-container {
  	opacity: 0;
 }
 .s3plus-para2-ani {
-	-webkit-animation: typing 2.2s 2.9s steps(11, end),
- 	blink-caret .3s step-end 2.9s infinite alternate;
-	animation: typing 2.2s 2.9s steps(11, end),
- 	blink-caret .3s step-end 2.9s infinite alternate;
+	-webkit-animation: typing 2.2s 2.7s steps(11, end),
+ 	blink-caret .3s step-end 2.7s infinite alternate;
+	animation: typing 2.2s 2.7s steps(11, end),
+ 	blink-caret .3s step-end 2.7s infinite alternate;
  	-webkit-animation-fill-mode: both;
  	animation-fill-mode: both;
 }
@@ -1803,6 +1894,10 @@ animation-play-state:paused;
 .ani-earth {
 	-webkit-animation: scaleOut 10s ease-in-out;
 	animation: scaleOut 10s ease-in-out;
+}
+.ani-s1-pos {
+	-webkit-animation: fadeInOut 0.6s ease-in-out 3;
+	animation: fadeInOut 0.6s ease-in-out 3;
 }
 @keyframes scaleOut {
   0% {
