--- a/css/index.css
+++ b/css/index.css
@@ -424,7 +424,7 @@ html,body,.swiper-container {
 	width: 58%;
 	left: 21%;
 }
-/*.s3-para1 {
+.s3-para1 {
 	font-size: 22px; 
  	border-right: .1em solid;
  	width: 2em;
@@ -441,7 +441,7 @@ html,body,.swiper-container {
  	blink-caret .3s step-end 1.1s 2  alternate;
  	-webkit-animation-fill-mode: both;
  	animation-fill-mode: both;
-}*/
+}
 .s3-para-a3 {
 	font-size: 22px; 
  	border-right: .1em solid;
@@ -460,7 +460,7 @@ html,body,.swiper-container {
  	-webkit-animation-fill-mode: both;
  	animation-fill-mode: both;
 }
-/*.s3-para2 {
+.s3-para2 {
 	font-size: 22px; 
  	border-right: .1em solid;
  	width: 8em; 
@@ -471,14 +471,14 @@ html,body,.swiper-container {
  	opacity: 0;
 }
 .s3-para2-ani {
-	-webkit-animation: typing 1.6s 1.7s steps(8, end),
- 	blink-caret .3s step-end 1.7s infinite alternate;
-	animation: typing 1.6s 1.7s steps(8, end),
- 	blink-caret .3s step-end 1.7s infinite alternate;
+	-webkit-animation: typing 1.6s 1.5s steps(8, end),
+ 	blink-caret .3s step-end 1.5s infinite alternate;
+	animation: typing 1.6s 1.5s steps(8, end),
+ 	blink-caret .3s step-end 1.5s infinite alternate;
  	-webkit-animation-fill-mode: both;
  	animation-fill-mode: both;
-}*/
-.s3-para1 {
+}
+/*.s3-para1 {
 	font-size: 22px; 
  	border-right: .1em solid;
  	width: 2em;
@@ -513,7 +513,7 @@ html,body,.swiper-container {
  	blink-caret .3s step-end 2.7s infinite alternate;
  	-webkit-animation-fill-mode: both;
  	animation-fill-mode: both;
-}
+}*/
 
 
 
@@ -1154,10 +1154,10 @@ html,body,.swiper-container {
 	opacity: 0;
 }
 .s4-para1-ani {
-	-webkit-animation: typing 1.6s steps(8, end) 1s,
- 	blink-caret .3s step-end 1s 5  alternate;
-	animation: typing 1.6s steps(8, end) 1s,
- 	blink-caret .3s step-end 1s 5  alternate;
+	-webkit-animation: typing 1.6s steps(8, end) 2.2s,
+ 	blink-caret .3s step-end 2.2s 5  alternate;
+	animation: typing 1.6s steps(8, end) 2.2s,
+ 	blink-caret .3s step-end 2.2s 5  alternate;
  	-webkit-animation-fill-mode: both;
  	animation-fill-mode: both;
 }
@@ -1172,10 +1172,10 @@ html,body,.swiper-container {
  	opacity: 0;
 }
 .s4-para2-ani {
-	-webkit-animation: typing 1.6s 2.6s steps(8, end),
- 	blink-caret .3s step-end 2.6s 5 alternate;
-	animation: typing 1.6s 2.6s steps(8, end),
- 	blink-caret .3s step-end 2.6s 5 alternate;
+	-webkit-animation: typing 1.6s 3.8s steps(8, end),
+ 	blink-caret .3s step-end 3.8s 5 alternate;
+	animation: typing 1.6s 3.8s steps(8, end),
+ 	blink-caret .3s step-end 3.8s 5 alternate;
  	-webkit-animation-fill-mode: both;
  	animation-fill-mode: both;
 }
@@ -1190,10 +1190,28 @@ html,body,.swiper-container {
  	opacity: 0;
 }
 .s4-para3-ani {
-	-webkit-animation: typing 0.8s 4.2s steps(4, end),
- 	blink-caret .3s step-end 4.2s infinite alternate;
-	animation: typing 0.8s 4.2s steps(4, end),
- 	blink-caret .3s step-end 4.2s infinite alternate;
+	-webkit-animation: typing 0.8s 5.4s steps(4, end),
+ 	blink-caret .3s step-end 5.4s infinite alternate;
+	animation: typing 0.8s 5.4s steps(4, end),
+ 	blink-caret .3s step-end 5.4s infinite alternate;
+ 	-webkit-animation-fill-mode: both;
+ 	animation-fill-mode: both;
+}
+.s4-para-a4 {
+	font-size: 22px; 
+ 	border-right: .1em solid;
+ 	width: 6em; /* fallback */
+ 	white-space: nowrap;
+ 	overflow: hidden;
+ 	margin: 0 auto;
+ 	border-color:transparent;
+ 	opacity: 0;
+}
+.s4-para-a4-ani {
+	-webkit-animation: typing 1.2s steps(6, end) 1s,
+ 	blink-caret .3s step-end 1s 4  alternate;
+	animation: typing 1.2s steps(6, end) 1s,
+ 	blink-caret .3s step-end 1s 4  alternate;
  	-webkit-animation-fill-mode: both;
  	animation-fill-mode: both;
 }
