--- a/css/my_money.css
+++ b/css/my_money.css
@@ -19,15 +19,13 @@ ul,li,div,p,body {
 	padding: 0;
 }
 
+.container {
+	margin-top: 8%;
+}
 .container>section {
 	width: 100%;
 }
 
-/*title*/
-
-.md-title>img {
-	width: 100%;
-}
 
 /*avatar*/
 .md-avatar img{
@@ -45,72 +43,83 @@ ul,li,div,p,body {
 	display: block;
 	position: relative;
 	width: 100%;
-	top: -15%;
+	top: -7%;
 	left: 0;
 }
 .md-ranking ul {
 	position: absolute;
-	top:30%;
-	left: 18%;
+	top:19%;
+	left: 14%;
 	list-style: none;
 	width: 100%;
-	height: 44%;
-	display: -webkit-flex;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
 }
+@media screen and (max-width: 414px) {
+	.md-ranking li {
+		margin-bottom: 3.8%;
+	}
+}
+@media screen and (max-width: 375px) {
+	.md-ranking li {
+		margin-bottom: 3%;
+	}
+}
+@media screen and (max-width: 320px) {
+	.md-ranking li {
+		margin-bottom: 2%;
+	}
+}
+.turn-page {
+	position: absolute;
+	bottom: 11.5%;
+	left: 50%;
+	-webkit-transform: translateX(-50%);
+	transform: translateX(-50%);
+}
+.turn-page a {
+	display: inline-block;
+	width: 60px;
+}
+.turn-page img {
+	display: block;
+	width: 100%;
+}
+
+
 .md-ranking span {
 	display: inline-block;
-}
-.md-ranking .order {
-	width: 16%;
 }
 .md-ranking .account {
 	width: 27%;
 	text-align: center;
 }
 .md-ranking .sum {
-	width: 24%;
+	width: 56%;
 	text-align: center;
 }
 
-/*record*/
-.md-record {
-	position: relative;
-	bottom: 0;
+.md-get-money {
 	left: 0;
+	bottom: 0;
 }
-.md-record .record-btn {
+.md-get-money a {
 	display: block;
-	position: absolute;
-	width: 30%;
-	top: 23%;
-	left: 31%;
+	margin: 0 auto;
 }
-.md-record img {
+.md-get-money img {
 	width: 100%;
-	display: block;
 }
-.md-record .to-my-money {
-	display: block;
-	position: absolute;
-	width: 15%;
-	top: 36%;
-	right: 19%;
+.md-get-money .get-money-btn {
+	width: 41.25%;
 }
-.img-fix {
+.md-get-money .rules {
+	width: 17%;
+	margin-top: 2%;
+}
+.md-get-money .show-rules {
+	position: fixed;
+	width: 60%;
+	top: 20%;
+	left: 20%;
 	display: none;
-}
-
-/*cancel*/
-.cancel {
-	position: absolute;
-	width: 47%;
-	top: 40%;
-	left: 26.5%;
-	display: none;
-}
-.cancel img {
-	width: 100%;
+	z-index: 2;
 }
